@@ -36,6 +36,14 @@ import static org.mockito.Mockito.*;
 @RunWith(MockitoJUnitRunner.class)
 public class ScreenLineManagerTest
 {
+	/*
+	 * Text example used to validate things with soft wrap
+	 * a
+	 * a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b
+	 * a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c
+	 * a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b c
+	 * a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca bb c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a b ca b c a b c a a
+	 */
 	@Mock
 	private JEditBuffer buffer;
 
@@ -105,55 +113,402 @@ public class ScreenLineManagerTest
 		assertFalse(screenLineManager.isScreenLineCountValid(4));
 	}
 
+	/**
+	 * Test editing the second line
+	 */
 	@Test
-	public void contentInserted()
+	public void contentInsertedExtendArray()
 	{
-		int maxLines = 5;
-		when(buffer.getLineCount()).thenReturn(maxLines);
-		screenLineManager.reset();
-		initLines(maxLines);
-		screenLineManager.contentInserted(1, 0);
-		assertTrue(screenLineManager.isScreenLineCountValid(0));
+		int numLines = 0;
+		initForInsert(5, numLines);
+		screenLineManager.contentInserted(1, numLines);
+
 		assertFalse(screenLineManager.isScreenLineCountValid(1));
-		assertTrue(screenLineManager.isScreenLineCountValid(2));
-		assertTrue(screenLineManager.isScreenLineCountValid(3));
-		assertTrue(screenLineManager.isScreenLineCountValid(4));
+
+		assertEquals(1, screenLineManager.getScreenLineCount(0));
+//		cannot call this as this screenline count is invalid
+//		assertEquals(0, screenLineManager.getScreenLineCount(1));
+		assertEquals(3, screenLineManager.getScreenLineCount(2));
+		assertEquals(4, screenLineManager.getScreenLineCount(3));
+		assertEquals(5, screenLineManager.getScreenLineCount(4));
 	}
 
-	@Test
-	public void contentInserted3lines()
+	private void initForInsert(int lineCountBeforeInsert, int numLines)
 	{
-		int maxLines = 5;
-		when(buffer.getLineCount()).thenReturn(maxLines);
+		when(buffer.getLineCount()).thenReturn(lineCountBeforeInsert + numLines);
 		screenLineManager.reset();
-		initLines(maxLines);
-		/*
-		 * 0 : 1
-		 * 1 : 1
-		 * 2 : 1
-		 * 3 : 1
-		 * 4 : 1
-		 */
-		screenLineManager.contentInserted(1, 3);
+		initLines(lineCountBeforeInsert);
+	}
+
+	/**
+	 * Test editing the second line and adding a new line
+	 */
+	@Test
+	public void contentInserted1lineOnLine1ExtendArray()
+	{
+		int numLines = 1;
+		initForInsert(5, numLines);
+		screenLineManager.contentInserted(1, numLines);
 		/* should be
 		 * 0 : 1
-		 * 1 : 0
-		 * 2 : 0
-		 * 3 : 0
-		 * 4 : 1
-		 * 5 : 1
-		 * 6 : 1
-		 * 7 : 1
+		 * 1 : 2 <- but it is 0 until the display manager updates it
+		 * 2 : 1 <- but it is 0 until the display manager updates it
+		 * 3 : 3
+		 * 4 : 4
+		 * 5 : 5
 		 */
-		assertTrue(screenLineManager.isScreenLineCountValid(0));
+		assertFalse(screenLineManager.isScreenLineCountValid(1));
+		assertFalse(screenLineManager.isScreenLineCountValid(2));
+
+		assertEquals(1, screenLineManager.getScreenLineCount(0));
+//		cannot call this as those screenline count is invalid
+//		assertEquals(0, screenLineManager.getScreenLineCount(1));
+//		assertEquals(0, screenLineManager.getScreenLineCount(2));
+
+
+		assertEquals(3, screenLineManager.getScreenLineCount(3));
+		assertEquals(4, screenLineManager.getScreenLineCount(4));
+		assertEquals(5, screenLineManager.getScreenLineCount(5));
+	}
+
+	/**
+	 * Test editing the second line and adding a new line
+	 */
+	@Test
+	public void contentInserted4linesOnLine0ExtendArray()
+	{
+		int numLines = 4;
+		initForInsert(5, numLines);
+		screenLineManager.contentInserted(0, numLines);
+		/* should be
+		 * 0 : 1 <- but it is 0 until the display manager updates it
+		 * 1 : 1 <- but it is 0 until the display manager updates it
+		 * 2 : 1 <- but it is 0 until the display manager updates it
+		 * 3 : 1 <- but it is 0 until the display manager updates it
+		 * 4 : 1 <- but it is 0 until the display manager updates it
+		 * 5 : 2
+		 * 6 : 3
+		 * 7 : 4
+		 * 8 : 5
+		 */
+		assertFalse(screenLineManager.isScreenLineCountValid(0));
 		assertFalse(screenLineManager.isScreenLineCountValid(1));
 		assertFalse(screenLineManager.isScreenLineCountValid(2));
 		assertFalse(screenLineManager.isScreenLineCountValid(3));
-//		in my opinion next 4 lines are the old lines 1 to 4 and they should be valid
-//		assertTrue(screenLineManager.isScreenLineCountValid(4));
-//		assertTrue(screenLineManager.isScreenLineCountValid(5));
-//		assertTrue(screenLineManager.isScreenLineCountValid(6));
-//		assertTrue(screenLineManager.isScreenLineCountValid(7));
+		assertFalse(screenLineManager.isScreenLineCountValid(4));
+		assertEquals(2, screenLineManager.getScreenLineCount(5));
+		assertEquals(3, screenLineManager.getScreenLineCount(6));
+		assertEquals(4, screenLineManager.getScreenLineCount(7));
+		assertEquals(5, screenLineManager.getScreenLineCount(8));
+	}
+
+	/**
+	 * Test editing the second line and adding a new line
+	 */
+	@Test
+	public void contentInserted4linesOnLine1ExtendArray()
+	{
+		int numLines = 4;
+		initForInsert(5, numLines);
+		screenLineManager.contentInserted(1, numLines);
+		/* should be
+		 * 0 : 1
+		 * 1 : 2 <- but it is 0 until the display manager updates it
+		 * 2 : 1 <- but it is 0 until the display manager updates it
+		 * 3 : 1 <- but it is 0 until the display manager updates it
+		 * 4 : 1 <- but it is 0 until the display manager updates it
+		 * 5 : 1 <- but it is 0 until the display manager updates it
+		 * 6 : 3
+		 * 7 : 4
+		 * 8 : 5
+		 */
+		assertFalse(screenLineManager.isScreenLineCountValid(1));
+		assertFalse(screenLineManager.isScreenLineCountValid(2));
+		assertFalse(screenLineManager.isScreenLineCountValid(3));
+		assertFalse(screenLineManager.isScreenLineCountValid(4));
+		assertFalse(screenLineManager.isScreenLineCountValid(5));
+
+		assertEquals(1, screenLineManager.getScreenLineCount(0));
+//		cannot call this as those screenline count is invalid
+//		assertEquals(0, screenLineManager.getScreenLineCount(1));
+//		assertEquals(0, screenLineManager.getScreenLineCount(2));
+//		assertEquals(0, screenLineManager.getScreenLineCount(3));
+//		assertEquals(0, screenLineManager.getScreenLineCount(4));
+//		assertEquals(0, screenLineManager.getScreenLineCount(5));
+
+
+		assertEquals(3, screenLineManager.getScreenLineCount(6));
+		assertEquals(4, screenLineManager.getScreenLineCount(7));
+		assertEquals(5, screenLineManager.getScreenLineCount(8));
+	}
+
+	/**
+	 * Test editing the second line and adding a new line
+	 */
+	@Test
+	public void contentInserted4linesOnLine2ExtendArray()
+	{
+		int numLines = 4;
+		initForInsert(5, numLines);
+		screenLineManager.contentInserted(2, numLines);
+		/* should be
+		 * 0 : 1
+		 * 1 : 2
+		 * 2 : 1 <- but it is 0 until the display manager updates it
+		 * 3 : 1 <- but it is 0 until the display manager updates it
+		 * 4 : 1 <- but it is 0 until the display manager updates it
+		 * 5 : 1 <- but it is 0 until the display manager updates it
+		 * 6 : 1 <- but it is 0 until the display manager updates it
+		 * 7 : 4
+		 * 8 : 5
+		 */
+		assertFalse(screenLineManager.isScreenLineCountValid(2));
+		assertFalse(screenLineManager.isScreenLineCountValid(3));
+		assertFalse(screenLineManager.isScreenLineCountValid(4));
+		assertFalse(screenLineManager.isScreenLineCountValid(5));
+		assertFalse(screenLineManager.isScreenLineCountValid(6));
+
+		assertEquals(1, screenLineManager.getScreenLineCount(0));
+		assertEquals(2, screenLineManager.getScreenLineCount(1));
+//		cannot call this as those screenline count is invalid
+//		assertEquals(0, screenLineManager.getScreenLineCount(2));
+//		assertEquals(0, screenLineManager.getScreenLineCount(3));
+//		assertEquals(0, screenLineManager.getScreenLineCount(4));
+//		assertEquals(0, screenLineManager.getScreenLineCount(5));
+//		assertEquals(0, screenLineManager.getScreenLineCount(6));
+
+		assertEquals(4, screenLineManager.getScreenLineCount(7));
+		assertEquals(5, screenLineManager.getScreenLineCount(8));
+	}
+
+	/**
+	 * Test editing the second line and adding a new line
+	 */
+	@Test
+	public void contentInserted2linesOnLastLineExtendArray()
+	{
+		int numLines = 2;
+		initForInsert(5, numLines);
+		screenLineManager.contentInserted(4, numLines);
+		/* should be
+		 * 0 : 1
+		 * 1 : 2
+		 * 2 : 3
+		 * 3 : 4
+		 * 4 : 0 <- but it is 0 until the display manager updates it
+		 * 5 : 0 <- but it is 0 until the display manager updates it
+		 */
+		assertFalse(screenLineManager.isScreenLineCountValid(4));
+		assertFalse(screenLineManager.isScreenLineCountValid(5));
+
+		assertEquals(1, screenLineManager.getScreenLineCount(0));
+		assertEquals(2, screenLineManager.getScreenLineCount(1));
+		assertEquals(3, screenLineManager.getScreenLineCount(2));
+		assertEquals(4, screenLineManager.getScreenLineCount(3));
+	}
+
+	/**
+	 * Test editing the second line
+	 */
+	@Test
+	public void contentInserted()
+	{
+		int numLines = 0;
+		initForInsertAndExtendArray(5, numLines);
+		screenLineManager.contentInserted(1, numLines);
+
+		assertFalse(screenLineManager.isScreenLineCountValid(1));
+
+		assertEquals(1, screenLineManager.getScreenLineCount(0));
+//		cannot call this as this screenline count is invalid
+//		assertEquals(0, screenLineManager.getScreenLineCount(1));
+		assertEquals(3, screenLineManager.getScreenLineCount(2));
+		assertEquals(4, screenLineManager.getScreenLineCount(3));
+		assertEquals(5, screenLineManager.getScreenLineCount(4));
+	}
+
+	private void initForInsertAndExtendArray(int maxLines, int numLines)
+	{
+		when(buffer.getLineCount()).thenReturn(maxLines + numLines);
+		screenLineManager.reset();
+		screenLineManager.contentInserted(1, numLines);
+		try
+		{
+			for (int i = maxLines + numLines; i < Integer.MAX_VALUE; i++)
+				screenLineManager.setScreenLineCount(i, 99);
+		}
+		catch (Exception e)
+		{
+			// to fill the array with 99 value
+		}
+		initLines(maxLines + numLines);
+	}
+
+	/**
+	 * Test editing the second line and adding a new line
+	 */
+	@Test
+	public void contentInserted1lineOnLine1()
+	{
+		int numLines = 1;
+		initForInsertAndExtendArray(5, numLines);
+		screenLineManager.contentInserted(1, numLines);
+		/* should be
+		 * 0 : 1
+		 * 1 : 2 <- but it is 0 until the display manager updates it
+		 * 2 : 1 <- but it is 0 until the display manager updates it
+		 * 3 : 3
+		 * 4 : 4
+		 * 5 : 5
+		 */
+		assertFalse(screenLineManager.isScreenLineCountValid(1));
+		assertFalse(screenLineManager.isScreenLineCountValid(2));
+
+		assertEquals(1, screenLineManager.getScreenLineCount(0));
+//		cannot call this as those screenline count is invalid
+//		assertEquals(0, screenLineManager.getScreenLineCount(1));
+//		assertEquals(0, screenLineManager.getScreenLineCount(2));
+
+
+		assertEquals(3, screenLineManager.getScreenLineCount(3));
+		assertEquals(4, screenLineManager.getScreenLineCount(4));
+		assertEquals(5, screenLineManager.getScreenLineCount(5));
+	}
+
+	/**
+	 * Test editing the second line and adding a new line
+	 */
+	@Test
+	public void contentInserted4linesOnLine0()
+	{
+		int nbLines = 4;
+		initForInsertAndExtendArray(5, nbLines);
+		screenLineManager.contentInserted(0, 4);
+		/* should be
+		 * 0 : 1 <- but it is 0 until the display manager updates it
+		 * 1 : 1 <- but it is 0 until the display manager updates it
+		 * 2 : 1 <- but it is 0 until the display manager updates it
+		 * 3 : 1 <- but it is 0 until the display manager updates it
+		 * 4 : 1 <- but it is 0 until the display manager updates it
+		 * 5 : 2
+		 * 6 : 3
+		 * 7 : 4
+		 * 8 : 5
+		 */
+		assertFalse(screenLineManager.isScreenLineCountValid(0));
+		assertFalse(screenLineManager.isScreenLineCountValid(1));
+		assertFalse(screenLineManager.isScreenLineCountValid(2));
+		assertFalse(screenLineManager.isScreenLineCountValid(3));
+		assertFalse(screenLineManager.isScreenLineCountValid(4));
+		assertEquals(2, screenLineManager.getScreenLineCount(5));
+		assertEquals(3, screenLineManager.getScreenLineCount(6));
+		assertEquals(4, screenLineManager.getScreenLineCount(7));
+		assertEquals(5, screenLineManager.getScreenLineCount(8));
+	}
+
+	/**
+	 * Test editing the second line and adding a new line
+	 */
+	@Test
+	public void contentInserted4linesOnLine1()
+	{
+		int nbLines = 4;
+		initForInsertAndExtendArray(5, nbLines);
+		screenLineManager.contentInserted(1, 4);
+		/* should be
+		 * 0 : 1
+		 * 1 : 2 <- but it is 0 until the display manager updates it
+		 * 2 : 1 <- but it is 0 until the display manager updates it
+		 * 3 : 1 <- but it is 0 until the display manager updates it
+		 * 4 : 1 <- but it is 0 until the display manager updates it
+		 * 5 : 1 <- but it is 0 until the display manager updates it
+		 * 6 : 3
+		 * 7 : 4
+		 * 8 : 5
+		 */
+		assertFalse(screenLineManager.isScreenLineCountValid(1));
+		assertFalse(screenLineManager.isScreenLineCountValid(2));
+		assertFalse(screenLineManager.isScreenLineCountValid(3));
+		assertFalse(screenLineManager.isScreenLineCountValid(4));
+		assertFalse(screenLineManager.isScreenLineCountValid(5));
+
+		assertEquals(1, screenLineManager.getScreenLineCount(0));
+//		cannot call this as those screenline count is invalid
+//		assertEquals(0, screenLineManager.getScreenLineCount(1));
+//		assertEquals(0, screenLineManager.getScreenLineCount(2));
+//		assertEquals(0, screenLineManager.getScreenLineCount(3));
+//		assertEquals(0, screenLineManager.getScreenLineCount(4));
+//		assertEquals(0, screenLineManager.getScreenLineCount(5));
+
+
+		assertEquals(3, screenLineManager.getScreenLineCount(6));
+		assertEquals(4, screenLineManager.getScreenLineCount(7));
+		assertEquals(5, screenLineManager.getScreenLineCount(8));
+	}
+
+	/**
+	 * Test editing the second line and adding a new line
+	 */
+	@Test
+	public void contentInserted4linesOnLine2()
+	{
+		int nbLines = 4;
+		initForInsertAndExtendArray(5, nbLines);
+		screenLineManager.contentInserted(2, 4);
+		/* should be
+		 * 0 : 1
+		 * 1 : 2
+		 * 2 : 1 <- but it is 0 until the display manager updates it
+		 * 3 : 1 <- but it is 0 until the display manager updates it
+		 * 4 : 1 <- but it is 0 until the display manager updates it
+		 * 5 : 1 <- but it is 0 until the display manager updates it
+		 * 6 : 1 <- but it is 0 until the display manager updates it
+		 * 7 : 4
+		 * 8 : 5
+		 */
+		assertFalse(screenLineManager.isScreenLineCountValid(2));
+		assertFalse(screenLineManager.isScreenLineCountValid(3));
+		assertFalse(screenLineManager.isScreenLineCountValid(4));
+		assertFalse(screenLineManager.isScreenLineCountValid(5));
+		assertFalse(screenLineManager.isScreenLineCountValid(6));
+
+		assertEquals(1, screenLineManager.getScreenLineCount(0));
+		assertEquals(2, screenLineManager.getScreenLineCount(1));
+//		cannot call this as those screenline count is invalid
+//		assertEquals(0, screenLineManager.getScreenLineCount(2));
+//		assertEquals(0, screenLineManager.getScreenLineCount(3));
+//		assertEquals(0, screenLineManager.getScreenLineCount(4));
+//		assertEquals(0, screenLineManager.getScreenLineCount(5));
+//		assertEquals(0, screenLineManager.getScreenLineCount(6));
+
+		assertEquals(4, screenLineManager.getScreenLineCount(7));
+		assertEquals(5, screenLineManager.getScreenLineCount(8));
+	}
+
+	/**
+	 * Test editing the second line and adding a new line
+	 */
+	@Test
+	public void contentInserted2linesOnLastLine()
+	{
+		int nbLines = 4;
+		initForInsertAndExtendArray(5, nbLines);
+		screenLineManager.contentInserted(4, 2);
+		/* should be
+		 * 0 : 1
+		 * 1 : 2
+		 * 2 : 3
+		 * 3 : 4
+		 * 4 : 0 <- but it is 0 until the display manager updates it
+		 * 5 : 0 <- but it is 0 until the display manager updates it
+		 */
+		assertFalse(screenLineManager.isScreenLineCountValid(4));
+		assertFalse(screenLineManager.isScreenLineCountValid(5));
+
+		assertEquals(1, screenLineManager.getScreenLineCount(0));
+		assertEquals(2, screenLineManager.getScreenLineCount(1));
+		assertEquals(3, screenLineManager.getScreenLineCount(2));
+		assertEquals(4, screenLineManager.getScreenLineCount(3));
 	}
 
 	@Test
@@ -188,6 +543,6 @@ public class ScreenLineManagerTest
 	private void initLines(int nb)
 	{
 		for (int i = 0; i < nb; i++)
-			screenLineManager.setScreenLineCount(i, 1);
+			screenLineManager.setScreenLineCount(i, i+1);
 	}
 }
