@@ -9,6 +9,10 @@ Alan Ezust, and Dale Anson for contributing to this release.
 
 {{{ Bug Fixes
 
+- Do not loose the screen line count of lines that were not modified
+  when inserting multiple lines (minor optimization)
+  (#4091 - Matthieu Casanova)
+
 - Fixed a NPE when trying to choose a non existing icon when adding a
   toolbar item (#3770 - Matthieu Casanova)
 
